🐛 Fix theme-navigation unexpected horizontal scroll (#33)

--- a/src/core/static/styles/components/_theme-navigation.scss
+++ b/src/core/static/styles/components/_theme-navigation.scss
@@ -42,6 +42,7 @@
       font-weight: 600;
       color: $color-brand;
       z-index: 1;
+      overflow: hidden;
       
       transition: all 0.2s ease;
 
